# skill-forge

./: .gitignore  CLAUDE.md  KNOWN_ISSUES.md  PRD.md  README.md  SOUL.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.claude-plugin/commands/forge/: capture.md  optimize.md  status.md
.claude/agents/: soul-reviewer.md
.claude/skills/greeter/: SKILL.md
.skill-forge/tests/greeter/: test_20260419_154000.py
.skill-forge/tests/greeter/replays/: 20260419_154000.json
docs/: DEMO.md
plugins/skill-forge/.claude-plugin/: plugin.json
src/skill_forge/: baseline.py  capture.py  cli.py  dispatch.py  optimize.py  prompts.py  status.py  transcript.py  worktree.py
src/skill_forge/harness/: v1.py
tests/: test_baseline.py  test_capture.py  test_cli.py  test_dispatch_m2.py  test_harness_v1.py  test_optimize.py  test_optimize_m3.py  test_plugin_packaging.py  test_status.py  test_transcript.py  test_worktree.py
