[project]
name = "skill-forge"
version = "0.1.1"
description = "A Claude Code plugin that makes your skills and subagents self-improving."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.12",
    "jsonschema>=4.20",
    "gitpython>=3.1",
    "pytest>=8.0",
]

[project.scripts]
forge = "skill_forge.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/skill_forge"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
